--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "start": "node index.js",
     "dev": "node --watch index.js",
     "build:ui": "rm -rf dist && cd ../../frontend/phonebook && npm run build && cp -r dist ../../backend/phonebook",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push origin main"
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push origin main",
+    "lint": "eslint ."
   },
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.0.1",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.32.0"
   }
 }
